apps/forgejo/http-routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo-https
  namespace: forgejo
spec:
  parentRefs:
    - name: shared-gateway
      namespace: gateway
  hostnames:
    - "git.lab.sturla.tech"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: forgejo-http
          port: 3000
